--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "test": "nodemon --exec mocha src/testcase/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -19,13 +20,19 @@
   "homepage": "https://github.com/Dhvanit41/Learn-node#readme",
   "dependencies": {
     "@hapi/boom": "^9.1.0",
+    "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.10",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
     "validator": "^13.1.17"
+  },
+  "devDependencies": {
+    "mocha": "^8.2.1",
+    "supertest": "^6.0.0"
   }
 }
