--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,8 @@
     "mongoose": "^5.10.10",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
-    "validator": "^13.1.17"
+    "validator": "^13.1.17",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "mocha": "^8.2.1",
